<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BuzzList</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_button_text">Login</string>
    <string name="login_welcome">Login with GT Credentials</string>
    <string name="login_image_description">Logo</string>
    <string name="no_internet">An Internet connection was not found</string>
    <string name="password_mismatch">Passwords do not match</string>
    <string name="missing_fields">One or more fields are empty</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="invalid_credentials">The credentials entered are invalid</string>
    <string name="tab_one">Browse</string>
    <string name="tab_two">Tab 2</string>
    <string name="tab_three">Tab 3</string>
    <string name="title_activity_browse_items">BrowseItemsActivity</string>
    <string name="bundle_item_model">item_model</string>
    <string name="home_welcome">Welcome to BuzzList! Buzzlist is a comunity set up to help students exchange items in a similar fashion as craigs list.</string>
    <string name="recent_title">Recent Items</string>
    <string name="browse_items_params">browse_params</string>
    <string name="menu_search">Search postings</string>
    <string name="menu_add">Add an item</string>
    <string name="menu_profile">View profile</string>
    <string name="title_activity_auth">AuthActivity</string>
    <string-array name="toggle_switches">
        <item >Yes</item>
        <item >No</item>
    </string-array>

</resources>
